--- a/Ziplines/Build_A_Tribute_Page/Tribute_Page.css
+++ b/Ziplines/Build_A_Tribute_Page/Tribute_Page.css
@@ -6,10 +6,11 @@
   }
 }
 
+/*Makes each section it's own individual box once the screen gets small enough*/
 @media (max-width: 768px) {
 
   #main {
-    background-color: #C8C8C8;
+    background-color: #FFFFCC;
   }
 
   .shadow {
@@ -54,7 +55,7 @@
   }
 
   #back {
-    background-color: #C8C8C8;
+    background-color: #FFFFCC;
   }
 
   #main {
@@ -77,6 +78,10 @@
 
   .bookImg blockquote footer{
     display: none;
+  }
+
+  #creator {
+    margin-top: -3%;
   }
 
 }
@@ -107,6 +112,7 @@
 body {
   font-family: Georgia;
   font-size: 100%;
+  background-color: #FFFFCC;
 }
 
 h1 {
@@ -143,12 +149,12 @@ a:link {
 }
 
 a:hover {
-  color: #009900;
+  color: #009999;
   text-decoration: none;
 }
 
 a:visited {
-  color: #00CC00;
+  color: #00CC99;
   text-decoration: none;
 }
 
@@ -269,4 +275,15 @@ blockquote:before {
   -moz-transform: translateY(40px);
 	-webkit-transform: translateY(40px);
 	transform: translateY(40px);
+}
+
+#creator {
+  font-family: 'Bad Script', cursive;
+  text-align: center;
+}
+
+#logo {
+  height: 10%;
+  width: 10%;
+  margin-top: -3%;
 }
