--- a/Intermediate_Front_End_Dev_Projects/Random_Quote_Machine/Random_Quote_Machine.css
+++ b/Intermediate_Front_End_Dev_Projects/Random_Quote_Machine/Random_Quote_Machine.css
@@ -2,20 +2,11 @@
   .back {
     margin-top: 20%;
   }
-
-  #bar {
-    width: 100%;
-  }
 }
 
 @media (min-width: 650px) {
   .back {
     margin-top: 30%;
-  }
-
-  #bar {
-    width: 90%;
-    margin-left: -3.5%;
   }
 }
 
@@ -38,17 +29,11 @@
 }
 
 
-
-html {
+body {
   background-image: url('http://cdn.backgroundhost.com/backgrounds/subtlepatterns/gplaypattern.png');
   background-repeat: repeat;
   font-family: Georgia;
   font-size: 150%
-}
-
-body {
-  background-image: url('http://cdn.backgroundhost.com/backgrounds/subtlepatterns/gplaypattern.png');
-  background-repeat: repeat;
 }
 
 blockquote {
@@ -64,7 +49,7 @@ blockquote:before {
     font-size: 500px;
     opacity: 0.5;
     position: absolute;
-    left: 3px;
+    left: 10%;
     top: -150px;
     color: #7a7a7a;
 }
@@ -78,11 +63,6 @@ blockquote:before {
   float:none;
   text-align:left;
   margin-right: -2px;
-}
-
-.back {
-  background-image: url('http://cdn.backgroundhost.com/backgrounds/subtlepatterns/gplaypattern.png');
-  background-repeat: repeat;
 }
 
 #main {
@@ -109,14 +89,6 @@ blockquote:before {
   height: 10%;
   width: 10%;
   margin-top: -3%;
-}
-
-#bar {
-  height: 5px;
-  margin-top: 5%;
-  margin-bottom: 5%;
-  background-color: #000000;
-  padding: 0.5%;
 }
 
 #notice {
